# FaceEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FaceAlignment/: cfan.cpp  cfan.h  common.h  face_alignment.h  sift.cpp
FaceDetection/: common.h
FaceDetection/classifier/: lab_boosted_classifier.h  mlp.cpp  mlp.h  surf_mlp.h
FaceDetection/feat/: lab_feature_map.cpp  lab_feature_map.h  surf_feature_map.cpp  surf_feature_map.h
FaceDetection/io/: lab_boost_model_reader.h  surf_mlp_model_reader.cpp  surf_mlp_model_reader.h
FaceDetection/util/: image_pyramid.h  nms.h
modules/: FindAMQP.cmake  FindEigen3.cmake  FindGSL.cmake  Findhiredis.cmake
